---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 15.03.2023
  Changes:
    - set basic wafer craft time to 5s to be in line with other wafer recipes
    - extraction from dirty water uses less dirty water for one cycle, no cost change
    - exchanged stone for rich uranium/neodymium solution in refining recipes
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 14.03.2023
  Bugfixes:
    - fixed a bug when artifacts spawned not properly
    - neo belt now has a related underground belt
    - load mod settings properly after change
  Changes:
    - added filters to inserter cranes
    - buffed speed modules tier 1-6 overall by + 10 speed, - 10 energy
    - buffed prod modules > tier 3 +1 percent per tier
    - decreased overall oil usage, decreased craft time of electricty and computer age tech pack
    - changed map color of lead for better visibilty
    - increased bot speed buff in speed techs by 10 percent each
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 12.03.2023
  Bugfixes:
    - fixed that both migrations were applied
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 12.03.2023
  Features:
    - added modules from tier 4-6
  Changes:
    - made nitric acid, advanced semiconductor waver and quantum age tech more expensive
    - adjust belt pricing for blue/purple belts
    - burner and electrical lab are now bit faster
  Bugfixes:
    - fixed some more lang issues
    - fixed an edgecase with induction matrix core
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 11.03.2023
  Bugfixes:
    - fixed that new menu sims now only show for factorio version >= 1.1.77